[gd_scene load_steps=8 format=3 uid="uid://ivs5ra6fwtms"]

[ext_resource type="Script" path="res://rsc/UI/UpgradeButton.gd" id="1_by02p"]
[ext_resource type="StyleBox" uid="uid://bgkdjgyff20e1" path="res://rsc/UI/smth.tres" id="2_p4o63"]
[ext_resource type="Texture2D" uid="uid://23ef8ealxu0i" path="res://assets/spel/star.png" id="3_f41bu"]
[ext_resource type="Texture2D" uid="uid://dgaqjhve3tfmp" path="res://assets/basic_shapes/Srar.png" id="3_r17oh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp5uv"]
bg_color = Color(0.392157, 0.627451, 0.972549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nvrc"]
bg_color = Color(0.392157, 0.627451, 0.972549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssws0"]
bg_color = Color(0.392157, 0.627451, 0.972549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="UpgradeButton" type="Button"]
custom_minimum_size = Vector2(600, 80)
theme_override_styles/normal = SubResource("StyleBoxFlat_xp5uv")
theme_override_styles/hover = SubResource("StyleBoxFlat_0nvrc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ssws0")
action_mode = 0
script = ExtResource("1_by02p")

[node name="Recommended" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 4.0
offset_right = 149.0
offset_bottom = 29.0
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "[center][b]RECOMMENDED[/b][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_right = 272.0
offset_bottom = 78.0
grow_horizontal = 2

[node name="Icon" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Portrait" type="Panel" parent="HBoxContainer/Icon"]
custom_minimum_size = Vector2(40, 40)
offset_left = 3.0
offset_top = 25.0
offset_right = 43.0
offset_bottom = 65.0
theme_override_styles/panel = ExtResource("2_p4o63")

[node name="Icon" type="TextureRect" parent="HBoxContainer/Icon/Portrait"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_f41bu")
expand_mode = 1

[node name="SubIcon" type="TextureRect" parent="HBoxContainer/Icon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 43.0
offset_right = 58.0
offset_bottom = 73.0
texture = ExtResource("3_r17oh")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="UpgradeName" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Upgrade name here[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="UpgradeDescription" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[center]Upgrade Description here longlong long long long long long long long long long long long man[/center]"
fit_content = true
scroll_active = false
